2000-12-08  Michael Meeks  <michael@helixcode.com>

	* container.c (do_add_cb): upd.

2000-12-01  Michael Meeks  <michael@helixcode.com>

	* container.c (resolve_and_add): upd.
	(do_add): add async callback.

2000-11-28  Michael Meeks  <michael@helixcode.com>

	* container.c (make_moniker): upd.

2000-11-20  Michael Meeks  <michael@helixcode.com>

	* container-io.c (save_component): add write flag and check
	for exception.

2000-10-24  Michael Meeks  <michael@helixcode.com>

	* container.c (final_setup): disable the 'query:' moniker until
	Miguel likes it.

Wed Oct 25 11:04:03 2000  Dietmar Maurer  <dietmar@maurer-it.com>

	* container-io.c: use Bonobo_Storage_open_stream instead of
	Bonobo_Storage_create_stream, and Bonobo_Unknown_unref instead
	of Bonobo_Stream_close.

Thu Oct 19 10:30:28 2000  Dietmar Maurer  <dietmar@maurer-it.com>

	* component.c (load_stream_cb): use bonobo_stream_open instead of
	bonobo_stream_fs_open

	* container-io.c (sample_container_save): use CORBA OpenMode flags

2000-10-11  Michael Meeks  <michael@helixcode.com>

	* container-menu.c (sample_app_fill_menu): use
	bonobo_ui_component_set_translate.

2000-10-09  Michael Meeks  <michael@helixcode.com>

	* component.c (component_user_context_cb): emasculate.

2000-09-12  Michael Meeks  <michael@helixcode.com>

	* container-menu.c (xml_dump_cb): add for debugging.

2000-08-14  Michael Meeks  <michael@helixcode.com>

	* container.c (resolve_and_add): unref the moniker.

2000-08-12  Michael Meeks  <michael@helixcode.com>

	* container-menu.c (add_cb): selector update.

	* container.c (sample_app_add_component): update activation

2000-08-11  Michael Meeks  <michael@helixcode.com>

	* container.c (final_setup): make dependent on environment
	variable: BONOBO_MONIKER_TEST

2000-08-10  Michael Meeks  <michael@helixcode.com>

	* component.c (sample_site_add_frame): publicize and rename
	to (sample_client_site_add_frame): this. (add_frame_cb): upd.
